k8s-ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: notification
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: myingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api/checkNotification/refresh"
          backend:
            service:
              name: check-notification-service
              port: 
                number: 8080
